Fix header/nav spacing

--- a/_sass/_nav.scss
+++ b/_sass/_nav.scss
@@ -7,6 +7,11 @@
             max-height: 100%;
         }
     }
+
+    .navbar-brand{
+        padding: 1rem;
+    }
+    
     .navbar-burger{
         margin-top: 2rem;
 
